test/scc_test/decl/semantic-errors/018.t
typedef static int int32;